--- a/package.json
+++ b/package.json
@@ -9,15 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.4",
     "@next/font": "13.1.1",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "axios": "^1.2.2",
+    "cheerio": "^1.0.0-rc.12",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
+    "iso8601-duration": "^2.1.1",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "request": "^2.88.2",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "@types/request": "^2.48.8"
   }
 }
